--- a/index.html
+++ b/index.html
@@ -27,5 +27,10 @@
 
         <h2>Chá Chai, R$ 1,85</h2>
         <p>Uma bebida condimentada com chá preto, especiarias, leite e mel.</p>
+
+        <p>
+            <a href="mission.html">Leia sobre a nossa Missão</a><br>
+            Leia a <a href="https://pt.wikipedia.org/wiki/Cafe%C3%ADna">Sobre Cafeína</a>
+        </p>
     </body>
 </html>
