--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
 
         <p>
             <a href="mission.html">Leia sobre a nossa Missão</a><br>
-            Leia a <a href="https://pt.wikipedia.org/wiki/Cafe%C3%ADna">Sobre Cafeína</a>
+            Leia a <a href="https://pt.wikipedia.org/wiki/Cafe%C3%ADna" title="Leia tudo sobre cafeína na Wikipédia">Sobre Cafeína</a>
         </p>
     </body>
 </html>
