Adicionando title ao link "Nossa missão"

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
         <p>Uma bebida condimentada com chá preto, especiarias, leite e mel.</p>
 
         <p>
-            <a href="mission.html">Leia sobre a nossa Missão</a><br>
+            <a href="mission.html" title="Leia mais sobre a importante missão do Café Starbuzz">Nossa Missão</a><br>
             Leia a <a href="https://pt.wikipedia.org/wiki/Cafe%C3%ADna" title="Leia tudo sobre cafeína na Wikipédia">Sobre Cafeína</a>
         </p>
     </body>
