Adicionando o atributo target ao link Sobre Cafeína

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
 
         <p>
             <a href="mission.html" title="Leia mais sobre a importante missão do Café Starbuzz">Nossa Missão</a><br>
-            Leia a <a href="https://pt.wikipedia.org/wiki/Cafe%C3%ADna#Saúde" title="Leia tudo sobre cafeína na Wikipédia">Sobre Cafeína</a>
+            Leia a <a target="_blank" href="https://pt.wikipedia.org/wiki/Cafe%C3%ADna#Saúde" title="Leia tudo sobre cafeína na Wikipédia">Sobre Cafeína</a>
         </p>
     </body>
 </html>
